improvements on the pages

--- a/contact.html
+++ b/contact.html
@@ -48,10 +48,10 @@
             <div class="social-icons">
                 <ul>
                     <li>
-                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100071513326237" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                     </li>
                     <li>
-                       <a href=""><i class="fa-solid fa-globe"></i></a> 
+                       <a href="https://www.naomimunkhphotography.net" target="_blank"><i class="fa-solid fa-globe"></i></a> 
                     </li>
                 </ul>
             </div>
@@ -86,14 +86,14 @@
                         <i class="fas fa-paper-plane"></i>
                     </span>
                     <span>Email Address</span>
-                    <p>naomimunkhphotography@gmail.com</p>
+                    <a href="mailto: naomimunkhphotography@gmail.com"><p>naomimunkhphotography@gmail.com</p></a>
                 </div>
                 <div>
                     <span class="contact-icon">
                         <i class="fas fa-globe"></i>
                     </span>
                     <span>Website</span>
-                    <p>www.naomimunkhphotography.net</p>
+                    <a href="https://www.naomimunkhphotography.net" target="_blank"><p>www.naomimunkhphotography.net</p></a>
                 </div>
             </div>
             <!-- map -->
