--- a/gallery.html
+++ b/gallery.html
@@ -49,10 +49,10 @@
             <div class="social-icons">
                 <ul>
                     <li>
-                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100071513326237" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                     </li>
                     <li>
-                       <a href=""><i class="fa-solid fa-globe"></i></a> 
+                       <a href="https://www.naomimunkhphotography.net" target="_blank"><i class="fa-solid fa-globe"></i></a> 
                     </li>
                 </ul>
             </div>
